partner-ingresses/one.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app: webapp
    argocd.argoproj.io/instance: argo-webapp
  name: webapp
  namespace: tevico
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-webapp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webapp
  sessionAffinity: None
  type: ClusterIP
