partner-ingresses/test.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: null
  labels:
    app: test
    argocd.argoproj.io/instance: argo-test
  name: test
  namespace: tevico
spec:
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http-webapp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: webapp
  sessionAffinity: None
  type: ClusterIP
