partner-ingresses/aafaq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:601311288054:certificate/547c9bc8-e2ad-4dc5-a0a2-2682d7ad34c8
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false
    alb.ingress.kubernetes.io/load-balancer-name: pre-prod-tevico-cluster-alb
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: aafaq
    component: ingress
    id: d17a68c4-38cd-4a01-a8e2-a365a095ce12
    partner: aafaq
  name: aafaq
  namespace: tevico
spec:
  ingressClassName: alb-common
  rules:
  - host: aafaq.preprod.tevi.co
    http:
      paths:
      - backend:
          service:
            name: webapp
            port:
              number: 80
        path: /
        pathType: Prefix
