partner-ingresses/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:601311288054:certificate/12cb7b23-b97a-42c1-a4f9-3bda890a95ac
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/load-balancer-attributes: deletion_protection.enabled=false
    alb.ingress.kubernetes.io/load-balancer-name: pre-prod-tevico-cluster-alb
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: example
    component: ingress
    id: 2a84d42d-b04c-4d32-856a-42db5b283b99
    partner: example
  name: example
  namespace: tevico
spec:
  ingressClassName: alb-common
  rules:
  - host: example.devopsnerds.com
    http:
      paths:
      - backend:
          service:
            name: webapp
            port:
              number: 80
        path: /
        pathType: Prefix
